--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -34,7 +34,7 @@
                 <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-white">{{productOff?.name}}</h5>
                 <!--</a>-->
             </div>
-            <markdown class="pt-2 line-clamp-2 max-h-16 dark:text-gray-300" [data]="productOff?.description"></markdown>
+            <markdown class="pt-2 line-clamp-2 max-h-16 dark:text-gray-200" [data]="productOff?.description"></markdown>
             <div class="grid grid-cols-2">
                 <div class="min-h-19 pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
                 <div class="flex items-center justify-end">
@@ -232,7 +232,7 @@
                             <p class="flex justify-center mb-2 font-normal text-gray-700 dark:text-white">{{price.description}}</p>
                         </div>
                     } @else if (price.priceType == 'custom') {
-                        <markdown class="dark:text-gray-600 w-full" [data]="price?.description"></markdown>
+                        <markdown class="dark:text-gray-200 w-full" [data]="price?.description"></markdown>
                     } @else {
                         <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
                             <div class="bg-blue-500 rounded-t-lg w-full">
@@ -290,7 +290,7 @@
                             </div>
                         } @empty {
                             <div class="flex justify-center items-center w-full">
-                                <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md" role="alert">
+                                <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md dark:bg-secondary-200 dark:text-primary-50" role="alert">
                                   <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                                   </svg>
@@ -320,7 +320,7 @@
                     </div>
                 } @empty {
                     <div class="flex justify-center items-center w-full">
-                        <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md" role="alert">
+                        <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md dark:bg-secondary-200 dark:text-primary-50" role="alert">
                           <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                           </svg>
