ADD landing page responsive + Categories filter responsive

--- a/src/app/offerings/explore-dome/explore-dome.component.html
+++ b/src/app/offerings/explore-dome/explore-dome.component.html
@@ -3,7 +3,7 @@
         <div class="px-5 py-5 bg-blue-900/20 rounded-lg">
             <h2 class="pb-2 text-5xl font-extrabold text-white mb-4 text-center pt-8">{{ 'EXPLORE._title' | translate }}</h2>
             <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 xl:px-48 text-center">{{ 'EXPLORE._subtitle' | translate }}</p>
-            <div class="grid grid-cols-3 gap-4 pt-4 pb-4 pl-16 pr-16">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 pt-4 pb-4 pl-8 pr-8 lg:pl-16 lg:pr-16">
                 <div class="m-2">
                     <h2 class="pb-2 text-xl font-extrabold text-white mb-4 text-start">{{ 'EXPLORE._events_title' | translate }}</h2>
                     <p class="mb-8 text-base font-normal text-gray-300 text-start">{{ 'EXPLORE._events_desc' | translate }}</p>
