--- a/src/app/offerings/how-it-works/how-it-works.component.html
+++ b/src/app/offerings/how-it-works/how-it-works.component.html
@@ -2,7 +2,7 @@
     <h2 class="pb-2 text-4xl font-extrabold text-primary-100 mb-4 text-center dark:text-primary-50">{{ 'HOWITWORKS._title' | translate }}</h2>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50 text-center">{{ 'HOWITWORKS._subtitle' | translate }}</p>
 
-    <div class="grid grid-cols-2 gap-8">
+    <div class="grid lg:grid-cols-2 gap-8 sm:grid-cols-1">
         <!-- CUSTOMERS -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
             <div class="grid grid-cols-80/20 pb-4 h-1/4 mb-2">
