--- a/src/app/offerings/contact-us/contact-us.component.html
+++ b/src/app/offerings/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<div (click)="$event.stopPropagation();" class="border w-1/2 relative border-primary-100 dark:border-primary-50 bg-secondary-50 dark:bg-secondary-100 rounded-lg p-8 md:p-12">
+<div (click)="$event.stopPropagation();" class="border w-4/5 lg:w-1/2 relative border-primary-100 dark:border-primary-50 bg-secondary-50 dark:bg-secondary-100 rounded-lg p-8 md:p-12">
     <button type="button" (click)="closeModal();$event.stopPropagation();" class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center">
         <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
