--- a/src/app/offerings/platform-benefits/platform-benefits.component.html
+++ b/src/app/offerings/platform-benefits/platform-benefits.component.html
@@ -2,7 +2,7 @@
     <h2 class="pb-2 text-4xl font-extrabold text-primary-100 mb-4 text-center dark:text-primary-50">{{ 'PLATFORM._title' | translate }}</h2>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50 text-center">{{ 'PLATFORM._subtitle' | translate }}</p>
 
-    <div class="grid grid-cols-3 gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- OPEN -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
             <div class="grid grid-cols-80/20 pb-4 h-1/4">
