ADD seller catalogs responsive + fixes

--- a/src/app/offerings/how-it-works/how-it-works.component.html
+++ b/src/app/offerings/how-it-works/how-it-works.component.html
@@ -78,12 +78,12 @@
                     {{ 'HOWITWORKS.PROVIDERS._contact' | translate }}
                 </button>
 
-                <button type="button" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
-                    <!--<svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <!--<button type="button" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
+                    <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>-->
+                    </svg>
                     {{ 'HOWITWORKS.PROVIDERS._onboard' | translate }}
-                </button>
+                </button>-->
             </div>
         </div>
     </div>
