--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
     <router-outlet></router-outlet>
 </main>
 <app-chatbot-widget class="relative"></app-chatbot-widget>
-<bae-footer></bae-footer>
+<bae-footer class="hidden md:block"></bae-footer>
