--- a/src/app/shared/categories-recursion/categories-recursion.component.html
+++ b/src/app/shared/categories-recursion/categories-recursion.component.html
@@ -4,7 +4,7 @@
     <td class="flex px-6 py-4 w-3/5">
         {{path}} / <b>{{child.name}}</b>
     </td>
-    <td class="flex px-6 py-4 w-fit">
+    <td class="hidden md:flex px-6 py-4 w-fit">
         {{child.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
     </td> 
     <td class="flex px-6 py-4 w-fit justify-end">
