DELETE footer note + CHANGE DOME Marketplace to YUMKET + SET landingpage categories to root categories

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -33,18 +33,11 @@
           </svg></button>
           <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
             <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
-              <li>
-                <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'DASHBOARD._cloud' | translate }}</button>
-              </li>
-              <li>
-                <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'DASHBOARD._edge' | translate }}</button>
-              </li>
-              <li>
-                <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'DASHBOARD._smart_ports' | translate }}</button>
-              </li>
-              <li>
-                <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'DASHBOARD._smart_cities' | translate }}</button>
-              </li>
+              @for(category of categories; track category.id; let idx = $index) {
+                <li>
+                  <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{category.name}}</button>
+                </li>
+              }
             </ul>
           </div>
           <div class="relative w-full">
